Fix header layout issues

--- a/css/header.css
+++ b/css/header.css
@@ -8,15 +8,14 @@ header {
   height: 20rem;
 }
 
-header .row .col-12 {
-  vertical-align: bottom;
-}
-
 header .title-large {
   font-size: 3rem;
   font-weight: 450;
 
   text-shadow: 0.1rem 0.1rem 0.25rem rgba(91, 100, 110, 0.15);
+
+  position: absolute;
+  bottom: 0;
 }
 
 @media (min-width: 992px) {
